--- a/src/style.css
+++ b/src/style.css
@@ -66,7 +66,7 @@ body {
   filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.2));
 }
 
-#temp_value {
+#value {
   font-weight: bold;
   font-size: 50px;
   line-height: 55px;
